fix anchor alignment

--- a/web_src/css/markup/content.css
+++ b/web_src/css/markup/content.css
@@ -26,16 +26,20 @@
   float: left;
   padding-right: 4px;
   margin-left: -20px;
-  line-height: 1;
   color: inherit;
 }
 
 .markup .anchor .svg {
+  display: inline-block;
   vertical-align: middle;
 }
 
 .markup .anchor:focus {
   outline: none;
+}
+
+.markup h1 .anchor {
+  margin-top: -2px; /* re-align to center */
 }
 
 .markup h1 .anchor .svg,
